Bring down file size, introduced rg_field_id

--- a/vasca/examples/query_GALEX.ipynb
+++ b/vasca/examples/query_GALEX.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "1d38ae3e-1ed9-4b6d-a31b-27f023ec2872",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
     "%matplotlib widget\n",
     "import matplotlib.pyplot as plt\n",
     "from astroquery.mast import Observations\n",
-    "from astropy.table import Table\n",
+    "from astropy.table import unique, Table\n",
     "from astropy import units as uu\n",
     "from astropy.coordinates import SkyCoord\n",
     "import healpy as hpy\n",
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "ec134a3f-360d-4eea-a7bf-007cf44f54da",
    "metadata": {},
    "outputs": [
@@ -44,7 +44,7 @@
      "data": {
       "text/html": [
        "<i>Table length=2</i>\n",
-       "<table id=\"table140377478154800-858731\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140278121200560-710820\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>idx</th><th>dataproduct_type</th><th>calib_level</th><th>obs_collection</th><th>obs_id</th><th>target_name</th><th>s_ra</th><th>s_dec</th><th>t_min</th><th>t_max</th><th>t_exptime</th><th>wavelength_region</th><th>filters</th><th>em_min</th><th>em_max</th><th>target_classification</th><th>obs_title</th><th>t_obs_release</th><th>instrument_name</th><th>proposal_pi</th><th>proposal_id</th><th>proposal_type</th><th>project</th><th>sequence_number</th><th>provenance_name</th><th>s_region</th><th>jpegURL</th><th>dataURL</th><th>dataRights</th><th>mtFlag</th><th>srcDen</th><th>intentType</th><th>obsid</th><th>objID</th></tr></thead>\n",
        "<tr><td>0</td><td>image</td><td>2</td><td>GALEX</td><td>2592597978464124928</td><td>PS_XMMLSS_MOS00</td><td>35.578863351058885</td><td>-3.14176421214975</td><td>54791.262777777774</td><td>55512.31023148148</td><td>40457.25</td><td>UV</td><td>NUV</td><td>169300000000.0</td><td>300700000000.0</td><td>--</td><td>--</td><td>55953.94460633</td><td>GALEX</td><td>--</td><td>--</td><td>DIS</td><td>DIS</td><td>--</td><td>DIS</td><td>CIRCLE ICRS  35.57886335  -3.14176421 0.625</td><td>http://galex.stsci.edu/data/GR6/pipe/01-vsn/08150-PS_XMMLSS_MOS00/d/01-main/0007-img/07-try/qa/PS_XMMLSS_MOS00-xd-int_2color.jpg</td><td>http://galex.stsci.edu/data/GR6/pipe/01-vsn/08150-PS_XMMLSS_MOS00/d/01-main/0007-img/07-try/PS_XMMLSS_MOS00-nd-exp.fits.gz</td><td>PUBLIC</td><td>--</td><td>5885.0</td><td>science</td><td>2047</td><td>3659</td></tr>\n",
        "<tr><td>1</td><td>image</td><td>2</td><td>GALEX</td><td>2592668347208302592</td><td>PS_XMMLSS_MOS01</td><td>36.49984981667359</td><td>-3.4923125504146</td><td>54791.33122685185</td><td>55512.37857638889</td><td>38609.0</td><td>UV</td><td>NUV</td><td>169300000000.0</td><td>300700000000.0</td><td>--</td><td>--</td><td>55953.94680547</td><td>GALEX</td><td>--</td><td>--</td><td>DIS</td><td>DIS</td><td>--</td><td>DIS</td><td>CIRCLE ICRS  36.49984982  -3.49231255 0.625</td><td>http://galex.stsci.edu/data/GR6/pipe/01-vsn/08152-PS_XMMLSS_MOS01/d/01-main/0007-img/07-try/qa/PS_XMMLSS_MOS01-xd-int_2color.jpg</td><td>http://galex.stsci.edu/data/GR6/pipe/01-vsn/08152-PS_XMMLSS_MOS01/d/01-main/0007-img/07-try/PS_XMMLSS_MOS01-nd-exp.fits.gz</td><td>PUBLIC</td><td>--</td><td>5885.0</td><td>science</td><td>2048</td><td>3661</td></tr>\n",
@@ -71,14 +71,14 @@
        "    datatables: 'https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min'\n",
        "}});\n",
        "require([\"datatables\"], function(){\n",
-       "    console.log(\"$('#table140377478154800-858731').dataTable()\");\n",
+       "    console.log(\"$('#table140278121200560-710820').dataTable()\");\n",
        "    \n",
        "jQuery.extend( jQuery.fn.dataTableExt.oSort, {\n",
        "    \"optionalnum-asc\": astropy_sort_num,\n",
        "    \"optionalnum-desc\": function (a,b) { return -astropy_sort_num(a, b); }\n",
        "});\n",
        "\n",
-       "    $('#table140377478154800-858731').dataTable({\n",
+       "    $('#table140278121200560-710820').dataTable({\n",
        "        order: [],\n",
        "        pageLength: 50,\n",
        "        lengthMenu: [[10, 25, 50, 100, 500, 1000, -1], [10, 25, 50, 100, 500, 1000, 'All']],\n",
@@ -92,7 +92,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "a068ac16-7358-4194-a16a-3ed1456fc794",
    "metadata": {},
    "outputs": [
@@ -143,7 +143,7 @@
      "data": {
       "text/html": [
        "<i>Table length=2</i>\n",
-       "<table id=\"table140377384465696-467251\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140278125832672-153395\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>idx</th><th>RATileCenter</th><th>DECTileCenter</th><th>survey</th><th>nexptime</th><th>fexptime</th><th>imgRunID</th><th>ParentImgRunID</th><th>joinID</th><th>tileNum</th><th>specTileNum</th><th>source</th><th>nPhotoObjects</th><th>nPhotoVisits</th><th>PhotoObsDate</th><th>spectra</th><th>nSpectra</th><th>nSpectraVisits</th><th>SpecObsDate</th><th>visitNum</th><th>subvis</th><th>minPhotoObsDate</th><th>maxPhotoObsDate</th><th>minSpecObsDate</th><th>maxSpecObsDate</th><th>PhotoObsDate_MJD</th><th>gall</th><th>galb</th><th>hpix</th></tr></thead>\n",
        "<tr><td>0</td><td>210.542232477159</td><td>-32.6804067553693</td><td>NGS</td><td>544.0</td><td>544.0</td><td>2391589523080347648</td><td>2391589660720627712</td><td>7804</td><td>2437</td><td>-999</td><td>visitI</td><td>7781</td><td>1</td><td>6/7/2003 5:02:29 AM</td><td>False</td><td>null</td><td>null</td><td>null</td><td>1</td><td>-999</td><td>6/7/2003 5:02:29 AM</td><td>6/7/2003 5:11:33 AM</td><td>null</td><td>null</td><td>52797.21005787037</td><td>319.74270865062874</td><td>27.871918173555255</td><td>209293</td></tr>\n",
        "<tr><td>1</td><td>201.528614022379</td><td>-42.9957260941383</td><td>NGS</td><td>937.0</td><td>937.0</td><td>2391624707452436480</td><td>2391624845092716544</td><td>74460</td><td>2438</td><td>-999</td><td>visitI</td><td>8258</td><td>1</td><td>6/7/2003 6:41:02 AM</td><td>False</td><td>null</td><td>null</td><td>null</td><td>1</td><td>-999</td><td>6/7/2003 6:41:02 AM</td><td>6/7/2003 6:56:39 AM</td><td>null</td><td>null</td><td>52797.278495370374</td><td>309.64494588030084</td><td>19.423571577159674</td><td>262512</td></tr>\n",
@@ -170,14 +170,14 @@
        "    datatables: 'https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min'\n",
        "}});\n",
        "require([\"datatables\"], function(){\n",
-       "    console.log(\"$('#table140377384465696-467251').dataTable()\");\n",
+       "    console.log(\"$('#table140278125832672-153395').dataTable()\");\n",
        "    \n",
        "jQuery.extend( jQuery.fn.dataTableExt.oSort, {\n",
        "    \"optionalnum-asc\": astropy_sort_num,\n",
        "    \"optionalnum-desc\": function (a,b) { return -astropy_sort_num(a, b); }\n",
        "});\n",
        "\n",
-       "    $('#table140377384465696-467251').dataTable({\n",
+       "    $('#table140278125832672-153395').dataTable({\n",
        "        order: [],\n",
        "        pageLength: 50,\n",
        "        lengthMenu: [[10, 25, 50, 100, 500, 1000, -1], [10, 25, 50, 100, 500, 1000, 'All']],\n",
@@ -191,7 +191,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "ae4d1ac2-6ac8-4e79-add0-1bb26a85d26e",
    "metadata": {},
    "outputs": [
@@ -233,14 +233,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "28005 visits found\n"
+      "28005 visits in 9796 fields found\n"
      ]
     },
     {
      "data": {
       "text/html": [
        "<i>Table length=4</i>\n",
-       "<table id=\"table140377478154800-708918\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140278121326496-515622\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>idx</th><th>RATileCenter</th><th>DECTileCenter</th><th>survey</th><th>nexptime</th><th>fexptime</th><th>imgRunID</th><th>ParentImgRunID</th><th>joinID</th><th>tileNum</th><th>specTileNum</th><th>source</th><th>nPhotoObjects</th><th>nPhotoVisits</th><th>PhotoObsDate</th><th>spectra</th><th>nSpectra</th><th>nSpectraVisits</th><th>SpecObsDate</th><th>visitNum</th><th>subvis</th><th>minPhotoObsDate</th><th>maxPhotoObsDate</th><th>minSpecObsDate</th><th>maxSpecObsDate</th><th>PhotoObsDate_MJD</th><th>gall</th><th>galb</th><th>hpix</th></tr></thead>\n",
        "<tr><td>0</td><td>231.921642929177</td><td>3.34027063665351</td><td>MIS</td><td>1696.0</td><td>1696.0</td><td>2391730260568702976</td><td>2391730398208983040</td><td>60377</td><td>2441</td><td>-999</td><td>visitI</td><td>11931</td><td>1</td><td>6/7/2003 11:37:03 AM</td><td>False</td><td>null</td><td>null</td><td>null</td><td>1</td><td>-999</td><td>6/7/2003 11:37:03 AM</td><td>6/7/2003 12:05:19 PM</td><td>null</td><td>null</td><td>52797.4840625</td><td>7.318115437067729</td><td>45.76107027896758</td><td>110939</td></tr>\n",
        "<tr><td>1</td><td>231.294710460205</td><td>2.47871950720032</td><td>MIS</td><td>1698.45</td><td>1698.45</td><td>2391765444940791808</td><td>2391765582581071872</td><td>80501</td><td>2442</td><td>-999</td><td>visitI</td><td>12210</td><td>1</td><td>6/7/2003 1:15:37 PM</td><td>False</td><td>null</td><td>null</td><td>null</td><td>1</td><td>-999</td><td>6/7/2003 1:15:37 PM</td><td>6/7/2003 1:43:55 PM</td><td>null</td><td>null</td><td>52797.552511574075</td><td>5.791997165545202</td><td>45.74212396120733</td><td>111879</td></tr>\n",
@@ -269,14 +269,14 @@
        "    datatables: 'https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min'\n",
        "}});\n",
        "require([\"datatables\"], function(){\n",
-       "    console.log(\"$('#table140377478154800-708918').dataTable()\");\n",
+       "    console.log(\"$('#table140278121326496-515622').dataTable()\");\n",
        "    \n",
        "jQuery.extend( jQuery.fn.dataTableExt.oSort, {\n",
        "    \"optionalnum-asc\": astropy_sort_num,\n",
        "    \"optionalnum-desc\": function (a,b) { return -astropy_sort_num(a, b); }\n",
        "});\n",
        "\n",
-       "    $('#table140377478154800-708918').dataTable({\n",
+       "    $('#table140278121326496-515622').dataTable({\n",
        "        order: [],\n",
        "        pageLength: 50,\n",
        "        lengthMenu: [[10, 25, 50, 100, 500, 1000, -1], [10, 25, 50, 100, 500, 1000, 'All']],\n",
@@ -290,7 +290,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,8 +310,9 @@
     "# Choose selection to apply and print basic info\n",
     "sel       = sel_sur\n",
     "tt_sel    = tt_vis[sel]\n",
-    "print(len(tt_sel),\"visits found\")\n",
-    "tt_sel[:4].show_in_notebook()"
+    "print(len(tt_sel),\"visits in\",len(unique(tt_sel, keys='ParentImgRunID')), \"fields found\")\n",
+    "\n",
+    "# Plot visit exposure distribution"
    ]
   },
   {
@@ -324,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "6c65650c-fa84-4e13-8c27-21257342cb18",
    "metadata": {},
    "outputs": [
@@ -338,7 +339,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4902abaa8e614695909f5ae4f507062f",
+       "model_id": "12f7f9b98ce44a70a1f93f7e168cc1da",
        "version_major": 2,
        "version_minor": 0
       },
@@ -379,7 +380,10 @@
     "\n",
     "#Plot\n",
     "hpy.mollview(np.log10(nr_visits_hres+1e-3), title=\"Nr. of visits in log10\",nest=False,cmap=\"nipy_spectral\",min=0,max=3,xsize=4800)\n",
-    "hpy.graticule()"
+    "hpy.graticule()\n",
+    "\n",
+    "#write healpix map to Aladin format, modify names\n",
+    "# hpy.fitsfunc.write_map(filename,[hp_vis, hp_exp],coord=\"C\",column_names=[\"nr_vis\", \"exposure\"],dtype=[np.float32, np.float32],overwrite=True,partial=True)"
    ]
   },
   {
