Update to test only part of TDS
Former-commit-id: 98ea7f6b05b721592865a0ebf77b51ee7a26bcd5

--- a/vasca/examples/vasca_pipe_result_analysis.ipynb
+++ b/vasca/examples/vasca_pipe_result_analysis.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "id": "a634423b-968a-4fad-8435-4ef2340005ce",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "id": "77f8401d-49cc-41d6-ba1b-c4caa9f7e842",
    "metadata": {},
    "outputs": [
@@ -56,7 +56,7 @@
      "data": {
       "text/html": [
        "<div><i>Table length=42</i>\n",
-       "<table id=\"table140148438403680\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table139651919618704\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>field_id</th><th>name</th><th>ra</th><th>dec</th><th>observatory</th><th>obs_filter</th><th>sel</th><th>fov_diam</th><th>nr_vis</th><th>time_bin_size_sum</th><th>time_start</th><th>time_stop</th><th>rg_fd_id</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th>deg</th><th>deg</th><th></th><th></th><th></th><th>deg</th><th></th><th>s</th><th>d</th><th>d</th><th></th></tr></thead>\n",
        "<thead><tr><th>bytes22</th><th>bytes22</th><th>float64</th><th>float64</th><th>bytes22</th><th>bytes22</th><th>bool</th><th>float32</th><th>int32</th><th>float32</th><th>float64</th><th>float64</th><th>int32</th></tr></thead>\n",
@@ -103,7 +103,7 @@
      "data": {
       "text/html": [
        "<div><i>Table length=1933</i>\n",
-       "<table id=\"table140148430749760\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table139651920302128\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>fd_src_id</th><th>ra</th><th>dec</th><th>pos_err_mean</th><th>pos_err</th><th>pos_var</th><th>nr_det</th><th>nr_uls</th><th>mag_mean</th><th>mag_err_mean</th><th>mag_var</th><th>flux_cpval</th><th>flux_rchiq</th><th>mag_dmax</th><th>mag_dmax_abs</th><th>mag_dmax_sig</th><th>ul_weight</th><th>mag_sig_int2</th><th>mag_skew</th><th>sel</th><th>rg_fd_id</th><th>rg_src_id</th><th>nr_fd_srcs</th></tr></thead>\n",
        "<thead><tr><th></th><th>deg</th><th>deg</th><th>deg</th><th>deg</th><th>deg</th><th></th><th></th><th>mag</th><th>mag</th><th>mag2</th><th></th><th></th><th>mag</th><th>mag</th><th></th><th></th><th>mag</th><th></th><th></th><th></th><th></th><th></th></tr></thead>\n",
        "<thead><tr><th>int32</th><th>float64</th><th>float64</th><th>float32</th><th>float32</th><th>float32</th><th>int32</th><th>int32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>bool</th><th>int32</th><th>int32</th><th>int32</th></tr></thead>\n",
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "id": "21fdcb27-8429-460a-960e-19ba5c512030",
    "metadata": {},
    "outputs": [
@@ -181,7 +181,7 @@
      "data": {
       "text/html": [
        "<div><i>Table length=1</i>\n",
-       "<table id=\"table140148437114096\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table139651911817808\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>field_id</th><th>name</th><th>ra</th><th>dec</th><th>observatory</th><th>obs_filter</th><th>sel</th><th>fov_diam</th><th>nr_vis</th><th>time_bin_size_sum</th><th>time_start</th><th>time_stop</th><th>rg_fd_id</th><th>fd_src_id</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th>deg</th><th>deg</th><th></th><th></th><th></th><th>deg</th><th></th><th>s</th><th>d</th><th>d</th><th></th><th></th></tr></thead>\n",
        "<thead><tr><th>bytes22</th><th>bytes22</th><th>float64</th><th>float64</th><th>bytes22</th><th>bytes22</th><th>bool</th><th>float32</th><th>int32</th><th>float32</th><th>float64</th><th>float64</th><th>int32</th><th>int32[1]</th></tr></thead>\n",
@@ -204,7 +204,7 @@
      "data": {
       "text/html": [
        "<div><i>Table length=1</i>\n",
-       "<table id=\"table140148436141344\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table139651920313072\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>fd_src_id</th><th>ra</th><th>dec</th><th>pos_err_mean</th><th>pos_err</th><th>pos_var</th><th>nr_det</th><th>nr_uls</th><th>mag_mean</th><th>mag_err_mean</th><th>mag_var</th><th>flux_cpval</th><th>flux_rchiq</th><th>mag_dmax</th><th>mag_dmax_abs</th><th>mag_dmax_sig</th><th>ul_weight</th><th>mag_sig_int2</th><th>mag_skew</th><th>sel</th><th>rg_fd_id</th><th>rg_src_id</th><th>nr_fd_srcs</th></tr></thead>\n",
        "<thead><tr><th></th><th>deg</th><th>deg</th><th>deg</th><th>deg</th><th>deg</th><th></th><th></th><th>mag</th><th>mag</th><th>mag2</th><th></th><th></th><th>mag</th><th>mag</th><th></th><th></th><th>mag</th><th></th><th></th><th></th><th></th><th></th></tr></thead>\n",
        "<thead><tr><th>int32</th><th>float64</th><th>float64</th><th>float32</th><th>float32</th><th>float32</th><th>int32</th><th>int32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>bool</th><th>int32</th><th>int32</th><th>int32</th></tr></thead>\n",
@@ -226,7 +226,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5bcc32a9472e4b3f8016669b820dae32",
+       "model_id": "6b925da40ad542a0bbecbb031ee8de9a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "id": "085c90f3-1946-4f47-9cb2-6d8fd5c39b37",
    "metadata": {},
    "outputs": [
@@ -280,7 +280,7 @@
      "data": {
       "text/html": [
        "<i>Table length=1</i>\n",
-       "<table id=\"table140153665370192-501308\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table139651893394496-982906\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>idx</th><th>fd_src_id</th><th>ra</th><th>dec</th><th>pos_err_mean</th><th>pos_err</th><th>pos_var</th><th>nr_det</th><th>nr_uls</th><th>mag_mean</th><th>mag_err_mean</th><th>mag_var</th><th>flux_cpval</th><th>flux_rchiq</th><th>mag_dmax</th><th>mag_dmax_abs</th><th>mag_dmax_sig</th><th>ul_weight</th><th>mag_sig_int2</th><th>mag_skew</th><th>sel</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th>deg</th><th>deg</th><th>deg</th><th>deg</th><th>deg</th><th></th><th></th><th>mag</th><th>mag</th><th>mag2</th><th></th><th></th><th>mag</th><th>mag</th><th></th><th></th><th>mag</th><th></th><th></th></tr></thead>\n",
        "<tr><td>0</td><td>1581</td><td>242.36798811674439</td><td>53.67344982477235</td><td>0.00018841348</td><td>5.7391357e-05</td><td>8.7359126e-08</td><td>10</td><td>0</td><td>21.619566</td><td>0.14499018</td><td>1.4587986</td><td>0.0</td><td>358.1139</td><td>2.359789</td><td>2.359789</td><td>91.9412</td><td>-1.0</td><td>1.4377764</td><td>-1.4794545</td><td>True</td></tr>\n",
@@ -307,14 +307,14 @@
        "    datatables: 'https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min'\n",
        "}});\n",
        "require([\"datatables\"], function(){\n",
-       "    console.log(\"$('#table140153665370192-501308').dataTable()\");\n",
+       "    console.log(\"$('#table139651893394496-982906').dataTable()\");\n",
        "    \n",
        "jQuery.extend( jQuery.fn.dataTableExt.oSort, {\n",
        "    \"optionalnum-asc\": astropy_sort_num,\n",
        "    \"optionalnum-desc\": function (a,b) { return -astropy_sort_num(a, b); }\n",
        "});\n",
        "\n",
-       "    $('#table140153665370192-501308').dataTable({\n",
+       "    $('#table139651893394496-982906').dataTable({\n",
        "        order: [],\n",
        "        pageLength: 50,\n",
        "        lengthMenu: [[10, 25, 50, 100, 500, 1000, -1], [10, 25, 50, 100, 500, 1000, 'All']],\n",
@@ -328,14 +328,14 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "88bcc9161fa94aa5b3737284c5581510",
+       "model_id": "271c4d0ea6bd4c4d9743bdf8a3d86ce3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -369,7 +369,7 @@
     "\n",
     "fig_sky = vvis.plot_field_sky(fd,plot_detections=True)\n",
     "\n",
-    "Table(fd.tt_sources[src_idx]).show_in_notebook()"
+    "display(Table(fd.tt_sources[src_idx]))"
    ]
   },
   {
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "id": "8f52ebf4-a2b9-4db6-95b6-afe76b38e9cd",
    "metadata": {},
    "outputs": [
@@ -392,14 +392,14 @@
        "<HpxGnomonicAxes: title={'center': 'Nr. of visits'}>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9d7278e368fb4297b49a500d0ab54ca0",
+       "model_id": "6a2c2745297d492b8d50bb61d4270ca3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "id": "4c285c1c-cb4a-4e8d-a945-a6564c70e611",
    "metadata": {},
    "outputs": [],
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "id": "45d4cdd3-a474-47ce-8721-ad882bdaa15f",
    "metadata": {},
    "outputs": [
@@ -493,7 +493,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1bed26c0e9034737b65cfab497f171d2",
+       "model_id": "fc170ba428a243b1abae7b631569a088",
        "version_major": 2,
        "version_minor": 0
       },
@@ -518,7 +518,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "025194d441f247099f1432439cd52485",
+       "model_id": "2a57fa81b3ed4de1a162feffc5dd22f7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -560,14 +560,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "id": "0d06fa0c-88fe-42ef-b220-96b6ac168e21",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0cc033811afc489f85246d7d70b04d4f",
+       "model_id": "9230e89b610f44cab15ff0608ec79808",
        "version_major": 2,
        "version_minor": 0
       },
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "id": "e09101aa-0167-4118-9cb6-0080f785fff4",
    "metadata": {},
    "outputs": [
@@ -614,14 +614,14 @@
        "Text(0.5, 0, 'Reduced chisquare')"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "16f6319050c942a7b93e8eee4361ef85",
+       "model_id": "54e495c6a97b44c6af4ea75586ddece4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "id": "d7dc2acb-1afc-41a1-840d-aa43de8e873a",
    "metadata": {},
    "outputs": [
@@ -691,14 +691,14 @@
        "[]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "330e3b7577dc44eeaaa0c2f2ee900414",
+       "model_id": "cca5d9ee44d044778b2ab6480af9fc42",
        "version_major": 2,
        "version_minor": 0
       },
@@ -761,14 +761,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "id": "bb7f3f5d-5353-429c-9234-30de8123ec53",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4240df34630749a493905cb151edf7a2",
+       "model_id": "336421c0bdb84daab75a6d0beba9632d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -824,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "id": "3e4ffacc-c925-4915-bbcf-2bd943598bdd",
    "metadata": {},
    "outputs": [],
@@ -834,14 +834,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "id": "040d1a6f-553b-4251-804b-eb5403c7dfae",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fa11b0393f9c4240abffc4ea70066c6e",
+       "model_id": "f42e573269a344c0bee470a5fab755dd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -890,17 +890,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 14,
    "id": "6ab727f4-c18a-45ce-8cf7-74d5b3fcf9e4",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "### Comparison to TDS catalog"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 15,
    "id": "ff2b3f16-befa-4267-bf52-07befd6ab658",
    "metadata": {},
    "outputs": [
@@ -908,7 +906,7 @@
      "data": {
       "text/html": [
        "<div><i>Table length=1078</i>\n",
-       "<table id=\"table140149464951312\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table139646675889520\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>recno</th><th>ID</th><th>RAJ2000</th><th>DEJ2000</th><th>l_mlow</th><th>mlow</th><th>l_Dmmax</th><th>Dmmax</th><th>l_sigint</th><th>sigint</th><th>l_Sd</th><th>Sd</th><th>l_Sy</th><th>Sy</th><th>LC</th><th>Mph</th><th>rmag</th><th>OT</th><th>z</th><th>X</th><th>Class</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th>deg</th><th>deg</th><th></th><th>mag</th><th></th><th>mag</th><th></th><th>mag</th><th></th><th>mag</th><th></th><th>mag</th><th></th><th></th><th>mag</th><th></th><th></th><th></th><th></th></tr></thead>\n",
        "<thead><tr><th>int32</th><th>bytes16</th><th>float64</th><th>float64</th><th>bytes1</th><th>float32</th><th>bytes1</th><th>float32</th><th>bytes1</th><th>float32</th><th>bytes1</th><th>float32</th><th>bytes1</th><th>float32</th><th>bytes1</th><th>bytes3</th><th>float32</th><th>bytes3</th><th>float32</th><th>bytes1</th><th>bytes12</th></tr></thead>\n",
@@ -960,27 +958,7 @@
      ]
     }
    ],
-   "source": [
-    "#Select vasca sources, 5 sigma 0.000000573303, 4 sigma 0.00006334, 3 sigma = 0.002699796\n",
-    "sel_vasca = (rg.tt_sources[\"flux_cpval\"]<0.002699796) * (rg.tt_sources[\"flux_cpval\"]>-0.5)\n",
-    "#sel_vasca = rg.tt_sources[\"mag_dmax_sig\"]>5\n",
-    "tt_vasca = rg.tt_sources[sel_vasca]\n",
-    "\n",
-    "#Read TDS\n",
-    "tt_tds = Table.read(\"./TDS-ApJ_766_60/table4.fit\", hdu=\"J_ApJ_766_60_table4\")\n",
-    "display(tt_tds)\n",
-    "\n",
-    "#Match VASCA-TDS\n",
-    "pos_tds = SkyCoord(ra=tt_tds[\"RAJ2000\"], dec=tt_tds[\"DEJ2000\"], unit=\"deg\", frame=\"icrs\")\n",
-    "pos_vasca = SkyCoord(ra=tt_vasca[\"ra\"], dec=tt_vasca[\"dec\"], unit=\"deg\", frame=\"icrs\")\n",
-    "idx_tds, dist_tds, _ = match_coordinates_sky(pos_vasca, pos_tds)\n",
-    "dist_lim = (5 * uu.arcsec).to(\"deg\")\n",
-    "sel_dist = dist_tds <= dist_lim\n",
-    "\n",
-    "#Print out\n",
-    "print(\"Total number of VASCA-TDS source matches:\",sel_dist.sum())\n",
-    "print(\"TDS sources total:\",len(tt_tds),\", VASCA sources total:\",len(tt_vasca))"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
